extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_church_pressed():
	pass # Replace with function body.


func _on_dungeon_pressed():
	pass # Replace with function body.


func _on_market_pressed():
	pass # Replace with function body.


func _on_black_market_pressed():
	pass # Replace with function body.


func _on_armorer_pressed():
	pass # Replace with function body.


func _on_wep_smith_pressed():
	pass # Replace with function body.


func _on_area_1_pressed():
	pass # Replace with function body.


func _on_area_2_pressed():
	pass # Replace with function body.


func _on_area_3_pressed():
	pass # Replace with function body.


func _on_entrance_pressed():
	pass # Replace with function body.


func _on_cp_1_pressed():
	pass # Replace with function body.


func _on_cp_2_pressed():
	pass # Replace with function body.


func _on_cp_3_pressed():
	pass # Replace with function body.


func _on_boss_cp_pressed():
	pass # Replace with function body.
